--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,8 @@
-PORT=tupuerto
+PORT=3001
 
-DB_DATABASE=tubasededatos
-DB_USERNAME=usuario
-DB_PASSWORD=password
-DB_HOST=host
+DB_DATABASE=bh_prueba
+DB_USERNAME=prueba
+DB_PASSWORD=1234
+DB_HOST=127.0.0.1
 
-PUBLIC_URL="yourpublic_url"
+PUBLIC_URL="http://localhost:3001/"
